# IS

./: CMakeLists.txt  README.md
Laba10/: AIMLBOT.sln
Laba10/AIMLBOT/: AIMLBOT.csproj  AIMLService.cs  ImprovedLoader.cs  NetParams.txt  NeuralNetworksStand.Designer.cs  NeuralNetworksStand.cs  Processor.cs  Program.cs  StudentNet.cs  StudentNetwork.cs  TGToken.txt  TelegramService.cs  packages.config
Laba5/: Fact.cs  Form1.Designer.cs  Form1.cs  Laba5.csproj  Laba5.sln  ProductionModel.cs  Rule.cs  facts.txt  facts_test.txt  rules.txt  rules_test.txt
Laba5/Properties/: AssemblyInfo.cs
Laba7/: NeuralNetwork1.sln
Laba7/NeuralNetwork1/: AccordNet.cs  BaseNetwork.cs  ImageGenerator.cs  NeuralNetwork1.csproj  NeuralNetworksStand.Designer.cs  NeuralNetworksStand.cs  Program.cs  StudentNet.cs  StudentPerceptron.cs
Laba8/: RecognNN.sln
Laba8/RecognNN/: AccordNet.cs  AugmentationImage.cs  Controller.cs  (+9 more)
db/: CMakeLists.txt  db.cpp  db.h  op1.txt
laba1/: CMakeLists.txt  laba1.cpp  laba1.h
laba2/: CMakeLists.txt  array_tag.cpp  array_tag.h  bit_tag.cpp  bit_tag.h  laba2.cpp  staff.cpp  staff.h
laba3/: CMakeLists.txt  bit_board.cpp  bit_board.h  laba3.cpp
laba4/: CMakeLists.txt  ai.cpp  ai.h  board.cpp  board.h  database.cpp  database.h  game.cpp  game.h  laba4.cpp  main.cpp  openings_v2.txt
laba6/: ClipsFormsExample.Designer.cs  ClipsFormsExample.cs  ClipsFormsExample.csproj  test.clp  test1.clp
laba9/: CliopsCF.csproj  CliopsCF.sln  ClipsFormsExample.Designer.cs  ClipsFormsExample.cs  dota.clp  games.clp  laba9.sln  persons.clp  test1.clp  test_cf.clp
(+7 files in other folders)
